<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Lab02</string>

    <string name="GetQButtonText">GET QUOTATION</string>
    <string name="FavButtonText">FAVORITE QUOTATIONS</string>
    <string name="SetButton">SETTINGS</string>
    <string name="AboutButtonText">ABOUT</string>
    <string name="About">Quotation Shake by\n\n Martin Bernácer Ferrer and Javier López Tadeo\n\n marberf1@inf.upv.es\njalota1@inf.upv.es\n\n2019\n\n\n\n\n\n\n\n\n\n\n\n\nhola</string>
    <string name="QuotationActivity">Random quotation</string>
    <string name="FavActivity">Favourite quotations</string>
    <string name="SettingsActivity">Settings</string>
    <string name="AboutActivity">About</string>
    <string name="main" translatable="false">QuotationShake</string>
    <string name="AuthorInfo">Author info</string>
    <string name="authorName" translatable="false">Nikola_Tesla</string>
    <string name="info_quotations">Hello %1s! \nPress Refresh to get a new quotation</string>
    <string name="sample_q">This is a sample quotation %1$d</string>
    <string name="sample_a">This is a sample author %1$d</string>
    <string name="idioma_english">English</string>
    <string name="idioma_russian">Russian</string>
    <string name="authorNotFound">The author is not valid</string>
    <string name="deleteMessage">Are you sure that you want to delete this quotation?</string>
    <string name="deleteTitle">Delete quotation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deteled">Deleted</string>
    <string name="menu_add">Add</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_clear">Clear all</string>
    <string name="clearAllAlertMessage">Are you sure that you want to delete ALL your favourte quotations?</string>
    <string name="clearAllAlertTitle">Clear all favourites</string>

    <string name="username" translatable="false">User name</string>
    <string name="username_description" translatable="false">Name idetifies the user</string>
    <string name="web_service" translatable="false">Web service</string>
    <string name="quotation_language" translatable="false">Quotation language</string>
    <string name="quotation_language_description" translatable="false">Quotation will be received in the selected language</string>
    <string name="request_method" translatable="false">HTTP Request method</string>
    <string name="request_method_description" translatable="false">Request will be performed using the selected HTTP method</string>
    <string name="database" translatable="false">Database</string>
    <string name="database_access_method" translatable="false">Database access method</string>
    <string name="database_access_method_description" translatable="false">Database will access following the selected method</string>
    <string name="get" translatable="false">GET</string>
    <string name="post" translatable="false">POST</string>
    <string name="room" translatable="false">Room</string>
    <string name="sqliteopenhelper" translatable="false">SQLiteOpenHelper</string>
    <string name="database_access_title" translatable="false">Database access method</string>
    <string name="database_access_description" translatable="false">Database will be accessed following the selected method</string>


</resources>