<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <Button
            android:id="@+id/GetQButton"
            android:background="@drawable/button_effect"
            android:textColor="@color/custom_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:onClick="callbackQuotation"
            android:text="@string/GetQButtonText" />

        <Button
            android:id="@+id/FavButton"
            android:background="@drawable/custom_button"
            android:textColor="@color/custom_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:onClick="callbackQuotation"
            android:text="@string/FavButtonText" />

        <Button
            android:id="@+id/SettingsButton"
            android:background="@drawable/custom_button"
            android:textColor="@color/custom_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:onClick="callbackQuotation"
            android:text="@string/SetButton" />

        <Button
            android:id="@+id/AboutButton"
            android:background="@drawable/custom_button"
            android:textColor="@color/custom_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:onClick="callbackQuotation"
            android:text="@string/AboutButtonText" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
